added visuals and open/close app functions without blutooth messages

--- a/smart_dam/src/dam_mobileapp/app/src/main/res/values/strings.xml
+++ b/smart_dam/src/dam_mobileapp/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">dam_mobile</string>
+    <string name="app_name" translatable="true">DAM APP</string>
+    <string name="buttonOpen" translatable="true">Open the Dam</string>
+    <string name="buttonClose" translatable="true">Close the Dam</string>
+    <string name="stateLabel" translatable="true">Stato della diga:</string>
+    <string name="levelLabel" translatable="true">Livello della diga:</string>
+    <string name="waterLabel" translatable="true">Livello acqua:</string>
+    <string name="placeholder">placeholder</string>
 </resources>
