added switch to block buttons and toggle modality

--- a/smart_dam/src/dam_mobileapp/app/src/main/res/values/strings.xml
+++ b/smart_dam/src/dam_mobileapp/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="levelLabel" translatable="true">Livello della diga:</string>
     <string name="waterLabel" translatable="true">Livello acqua:</string>
     <string name="placeholder">placeholder</string>
+    <string name="mode">Modalità Automatica</string>
+    <string name="auto_mode">Modalità Automatica</string>
+    <string name="manual_mode">Modalità Manuale</string>
 </resources>
